Update 1.3 Check that during joke upload the title and content is populated Show progress bar during initialization

--- a/Hindi Jokes/Hindi Jokes.Windows/HTMLDisplayPage.xaml
+++ b/Hindi Jokes/Hindi Jokes.Windows/HTMLDisplayPage.xaml
@@ -75,8 +75,19 @@
 
         <Grid Grid.Row="1"
               Margin="10,10,10,10">
+            
             <WebView Name="webView">
             </WebView>
+
+            <ProgressBar Name="progressBar"
+                         IsIndeterminate="False"
+                         HorizontalAlignment="Center" 
+                         Height="30" 
+                         VerticalAlignment="Center" 
+                         Width="250" 
+                         Visibility="Collapsed">
+            </ProgressBar>
+
         </Grid>
         
     </Grid>
