--- a/Hindi Jokes/Hindi Jokes.WindowsPhone/MainPage.xaml
+++ b/Hindi Jokes/Hindi Jokes.WindowsPhone/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Hindi_Jokes"
+    DataContext="{Binding PostData, RelativeSource={RelativeSource Self}}"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:UI="using:Microsoft.Advertising.WinRT.UI"
@@ -65,6 +66,7 @@
                         HorizontalAlignment="Stretch" 
                         VerticalAlignment="Stretch"
                         Margin="10,10,10,10" 
+                        Text="{Binding Title}"
                         FontSize="30" />
 
                     <TextBlock 
@@ -72,6 +74,7 @@
                         HorizontalAlignment="Stretch" 
                         VerticalAlignment="Stretch"
                         Margin="10,10,10,10"
+                        Text="{Binding MetaData}"
                         FontSize="15">
                     </TextBlock>
 
@@ -81,6 +84,7 @@
                         VerticalAlignment="Stretch"
                         Margin="15,10,15,5" 
                         FontSize="20"
+                        Text="{Binding Content}"
                         TextWrapping="Wrap"/>
 
                 </StackPanel>
