--- a/Hindi Jokes/Hindi Jokes.Windows/MainPage.xaml
+++ b/Hindi Jokes/Hindi Jokes.Windows/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Hindi_Jokes"
+    DataContext="{Binding PostData, RelativeSource={RelativeSource Self}}"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:UI="using:Microsoft.Advertising.WinRT.UI"
@@ -74,6 +75,7 @@
                     x:Name="postTitle"
                     HorizontalAlignment="Stretch" 
                     VerticalAlignment="Stretch"
+                    Text="{Binding Title}"
                     Margin="20,10,20,10"
                     FontSize="30">
                 </TextBlock>
@@ -82,6 +84,7 @@
                     x:Name="postMeta"
                     HorizontalAlignment="Stretch" 
                     VerticalAlignment="Stretch"
+                    Text="{Binding MetaData}"
                     Margin="20,10,20,10"
                     FontSize="15">
                 </TextBlock>
@@ -90,6 +93,7 @@
                     x:Name="postView"
                     HorizontalAlignment="Stretch" 
                     VerticalAlignment="Stretch"
+                    Text="{Binding Content}"
                     Margin="20,10,20,10"
                     FontSize="25" 
                     TextWrapping="WrapWholeWords" >
@@ -97,16 +101,6 @@
 
             </StackPanel>
             </ScrollViewer>
-            
-            <!--
-            <UI:AdControl Grid.Row="2"
-                ApplicationId="8c14b48a-b63e-4f4e-9c7e-d03b1e37047c"
-                AdUnitId="11646703"
-                HorizontalAlignment="Center"
-                Height="90"
-                VerticalAlignment="Center"
-                Width="728"/>
-            -->
             
         </Grid>
 
