--- a/Hindi-Jokes/Views/SettingsPage.xaml
+++ b/Hindi-Jokes/Views/SettingsPage.xaml
@@ -66,16 +66,27 @@
                               VerticalScrollBarVisibility="Auto">
                     <RelativePanel HorizontalAlignment="Left">
 
+                        <ToggleSwitch x:Name="ShowMemes"
+                                      Header="Show Memes (Jokes with image contents)"
+                                      IsOn="{Binding ShowMemes, Mode=TwoWay}"
+                                      OffContent="Do Not show Memes"
+                                      OnContent="Show Memes"
+                                      Margin="5"
+                                      RelativePanel.AlignLeftWithPanel="True"
+                                      RelativePanel.AlignTopWithPanel="True" />
+                        
                         <ToggleSwitch x:Name="UseShellDrawnBackButtonToggleSwtich"
                                       Header="Use shell-drawn back button"
+                                      Margin="5"
                                       IsOn="{Binding UseShellBackButton, Mode=TwoWay}"
                                       OffContent="Back button in page header"
                                       OnContent="Back button in titlebar or taskbar"
-                                      RelativePanel.AlignLeftWithPanel="True"
-                                      RelativePanel.AlignTopWithPanel="True" />
+                                      RelativePanel.Below="ShowMemes"
+                                      RelativePanel.AlignLeftWithPanel="True" />
 
                         <ToggleSwitch x:Name="UseLightThemeToggleSwitch" Header="Use Light Theme"
                                       IsOn="{Binding UseLightThemeButton, Mode=TwoWay}"
+                                      Margin="5"
                                       OffContent="Dark theme" OnContent="Light theme"
                                       RelativePanel.AlignLeftWithPanel="True"
                                       RelativePanel.Below="UseShellDrawnBackButtonToggleSwtich" />
